Insertacion de Responsive

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -227,3 +227,37 @@ footer h3{
     padding: 1%;
 
 }
+
+@media (max-width: 600px) { 
+   
+
+    .icon {width: auto;}
+
+    section {
+        width: auto;
+
+    }
+
+     .col figcaption {
+       font-size: 5px;
+     }
+
+     .col img {
+        width: 100px;
+     }
+
+    .Texto p {
+        font-size: 15px;
+
+    }
+       
+    .Texto2 p {
+        font-size: 15px;
+    }
+
+    .col iframe {
+        width: 300px;
+        height: 200px;
+    }
+
+ }
