--- a/css/estilo.css
+++ b/css/estilo.css
@@ -226,7 +226,120 @@ footer h3{
     border-radius: 20px;
     padding: 1%;
 
+
+
+  }
+
+
+
+.sec2 .titule {
+    font-size: 80px;
+    justify-content: center;
+    display: flex;
+    padding-bottom: 50px;
 }
+
+.sec2 article p {
+    font-size: 30px;
+}
+
+
+.sec2 article{
+    padding: 80px;
+}
+
+.sec2 article h2 {
+     
+    font-size: 50px;
+    margin: 10px;
+    
+      
+}
+.sec2 article h4 {
+    font-size: 27px;
+    display: flex;
+    padding: 10px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+
+.register {
+ 
+    width: 400px;
+    background: #24303c;
+    padding: 30px;
+    margin: auto;
+    margin-top: 100px;
+    border-radius: 4px;
+    color: white;
+    box-shadow: 7px 13px 37px #000;
+
+}
+
+
+.register h4 {
+    font-size: 22px;
+    margin-bottom: 20px;
+
+}
+
+.controls {
+    width: 100%;
+    background:  #24303c;
+    padding: 10px;
+    border-radius: 4px;
+    margin-bottom: 16px;
+    border: 1px solid #1f53c5;
+    font-size: 18px;
+}
+
+.register p {
+    height: 40px;
+    text-align: center;
+    font-size: 18px;
+}
+
+.register a {
+    color: white;
+    text-decoration: none;
+
+}
+
+.register a:hover{
+    color: white;
+    text-decoration: underline;
+}
+
+.register .botons{
+    width: 100%;
+    background-color:  #1f53c5;
+    border: none;
+    padding: 12px;
+    color: white;
+    margin: 16px 0;
+    font-size: 16px;
+}
+
+.controls {
+    color: white;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* RESPONSIVE */
+
+
 
 @media (max-width: 600px) { 
    
@@ -262,6 +375,10 @@ footer h3{
 
 
 
+    .titule {
+    font-size: 200;
+    padding: 50em;
+ }
 
 
  }
