--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,384 +1,306 @@
-*{
-    border: 0;
-    margin: 0;
-    padding: 0;
+* {
+  border: 0;
+  margin: 0;
+  padding: 0;
 }
 
-
-header{
-    display: flex;
-    flex-direction: row;
-    background: url(../backgrounds/flat-world-rock-day-background-with-guitars-speakers_23-2149429179.avif) no-repeat;
-    background-size: 1000000px;
-    padding: 5px 10%;
-    justify-content: space-around;
-    align-items: center;
-    height:  85px;
-
+header {
+  display: flex;
+  flex-direction: row;
+  background: url(../backgrounds/flat-world-rock-day-background-with-guitars-speakers_23-2149429179.avif) no-repeat;
+  background-size: 1000000px;
+  padding: 5px 10%;
+  justify-content: space-around;
+  align-items: center;
+  height: 85px;
 }
 
-header .icon img{
-    width: 10vw; 
-    height: 70px;
-    transition: all 0.3s;
-
+header .icon img {
+  width: 10vw;
+  height: 70px;
+  transition: all 0.3s;
 }
 
 header .icon {
-    cursor: pointer;
+  cursor: pointer;
 }
 
-
-header .icon img:hover{
-    transform: scale(1.2);
+header .icon img:hover {
+  transform: scale(1.2);
 }
 
-header ul{
-    list-style: none;
+header ul {
+  list-style: none;
 }
 
 header ul li {
-    display: inline-block;
-    padding: 0 20px;
-    background-color: darkgoldenrod;
-    border: none;
-    border-radius: 50px;
-    padding: 1em;
-    margin: 1mm;
+  display: inline-block;
+  padding: 0 20px;
+  background-color: darkgoldenrod;
+  border: none;
+  border-radius: 50px;
+  padding: 1em;
+  margin: 1mm;
 }
 
 header nav ul li a {
-    font-size: 700;
-    color: aliceblue;
-    text-decoration: none;
-
+  font-size: 700;
+  color: aliceblue;
+  text-decoration: none;
 }
 
 header nav ul a:hover {
-    transform:  scale(1.1);
-    padding: 1em;
+  transform: scale(1.1);
+  padding: 1em;
 }
 
-header ul li a:hover{
-    color: chocolate;
-}
-
-
-
-
-
-
-
-main{
-    background: url(../backgrounds/hand-drawn-world-rock-day-background_23-2149445205.avif);
-    padding: 5%;
-  
-}
-
-section{ 
-    background-color: bisque;
-    padding: 1%;
-    background-color: aliceblue;
-    border-radius: 50px;
-}
-
-
-
-body{
-    background: url(./img/images.jpeg);
-}
-
-
-
-
-
-section .Texto {
-    display: flex;
-    justify-content: center;
-    align-items: end;
-    flex-wrap: wrap;
-}
-
-.Texto .titule {
-    background: url(../backgrounds/flat-world-rock-day-background-with-guitars-speakers_23-2149429179.avif);
-    border: none;
-    border-radius:50px ;
-    padding: 1%;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    text-align: center;
-    color: aliceblue;
-    
-    
-}
-
-.Texto p {
-    display: flex;
-    font-size: 20px;
-    text-align: center;
-    
-   
-}
-
-.Texto img{
-  
-    width:  300px;
-    display: flex;
-    padding: 1%;
-    
-}
-
-section .Texto2 {
-    display: flex;
-    justify-content: start;
-    align-items: end;
-    flex-wrap: wrap;
-}
-
-.Texto2 h1 {
-    background-color:cadetblue;
-    border: none;
-    border-radius:50px ;
-    padding: 1%;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 30px;
-}
-
-.Texto2 p {
-    display: block;
-    font-size: 20px;
-   
-}
-
-
-.container {
-    padding: 5%;
-    background-color: aliceblue;
-
-}
-
-.row {
-    padding: 4%;
-    border: 10px solid black;
-    background: url(../backgrounds/rock-music-background-seamless-pattern-50685509.jpg);
-}
-
-.col{
-    border: 2px solid black;
-    background-color: aliceblue;
-    padding: 5%;
-    margin: 2%;
-}
-
-figcaption{
-    font-size: large;
-    color: black;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-}
-
-
-
-article h2 {
-    background-color: burlywood;
-    border-radius: 10px;
-    width: 15vw;
-    display: flex;
-    text-align: center;
-}
-
-
-.col img:hover{
-    transform:  scale(1.3);
-    padding: 1em;
-    border: 5px solid cornflowerblue;
-}
-
-footer{
-    justify-content: center;
-    display: flex;
-    background: url(../backgrounds/flat-world-rock-day-background-with-guitars-speakers_23-2149429179.avif);
-
-}
-
-footer h3{
-    padding: 1%;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color:white;
-    background-color: black;
-    border-radius: 50px;
-    margin: 2%;
-}
-
-.titulo {
-    background:cadetblue;
-    border: none;
-    border-radius:50px ;
-    padding: 1%;
-    font-family:'Courier New', Courier, monospace;
-    text-align: center;
-    color: black;
-}
-
-.Titular{
-    text-align: center;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
-    color:brown;
-    background-color: aliceblue;
-    border-radius: 20px;
-    padding: 1%;
-
-
-
-  }
-
-
-
-.sec2 .titule {
-    font-size: 80px;
-    justify-content: center;
-    display: flex;
-    padding-bottom: 50px;
-}
-
-.sec2 article p {
-    font-size: 30px;
-}
-
-
-.sec2 article{
-    padding: 80px;
-}
-
-.sec2 article h2 {
-     
-    font-size: 50px;
-    margin: 10px;
-    
-      
-}
-.sec2 article h4 {
-    font-size: 27px;
-    display: flex;
-    padding: 10px;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-
-.register {
- 
-    width: 400px;
-    background: #24303c;
-    padding: 30px;
-    margin: auto;
-    margin-top: 100px;
-    border-radius: 4px;
-    color: white;
-    box-shadow: 7px 13px 37px #000;
-
-}
-
-
-.register h4 {
-    font-size: 22px;
-    margin-bottom: 20px;
-
-}
-
-.controls {
-    width: 100%;
-    background:  #24303c;
-    padding: 10px;
-    border-radius: 4px;
-    margin-bottom: 16px;
-    border: 1px solid #1f53c5;
-    font-size: 18px;
+header ul li a:hover {
+  color: chocolate;
 }
 
 .register p {
-    height: 40px;
-    text-align: center;
-    font-size: 18px;
+  height: 40px;
+  text-align: center;
+  font-size: 18px;
 }
 
-.register a {
-    color: white;
-    text-decoration: none;
-
+.register h4 {
+  font-size: 22px;
+  margin-bottom: 20px;
 }
 
-.register a:hover{
-    color: white;
-    text-decoration: underline;
+.register {
+  width: 400px;
+  background: #24303c;
+  padding: 30px;
+  margin: auto;
+  margin-top: 100px;
+  border-radius: 4px;
+  color: white;
+  box-shadow: 7px 13px 37px #000;
+}
+.register .botons {
+  width: 100%;
+  background-color: #1f53c5;
+  border: none;
+  padding: 12px;
+  color: white;
+  margin: 16px 0;
+  font-size: 16px;
+}
+.register fieldset .controls {
+  width: 100%;
+  background: #24303c;
+  padding: 10px;
+  border-radius: 4px;
+  margin-bottom: 16px;
+  border: 1px solid #1f53c5;
+  font-size: 18px;
+  color: white;
+}
+.register fieldset .controls a {
+  color: white;
+  text-decoration: none;
+}
+.register fieldset .controls a:hover {
+  color: colorcss;
+  text-decoration: underline;
 }
 
-.register .botons{
-    width: 100%;
-    background-color:  #1f53c5;
-    border: none;
-    padding: 12px;
-    color: white;
-    margin: 16px 0;
-    font-size: 16px;
+main {
+  background: url(../backgrounds/hand-drawn-world-rock-day-background_23-2149445205.avif);
+  padding: 5%;
 }
 
-.controls {
-    color: white;
+section {
+  background-color: bisque;
+  padding: 1%;
+  background-color: aliceblue;
+  border-radius: 50px;
 }
 
+body {
+  background: url(./img/images.jpeg);
+}
 
+section .Texto {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  flex-wrap: wrap;
+}
 
+.Texto .titule {
+  background: url(../backgrounds/flat-world-rock-day-background-with-guitars-speakers_23-2149429179.avif);
+  border: none;
+  border-radius: 50px;
+  padding: 1%;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  text-align: center;
+  color: aliceblue;
+}
 
+.Texto p {
+  display: flex;
+  font-size: 20px;
+  text-align: center;
+}
 
+.Texto img {
+  width: 300px;
+  display: flex;
+  padding: 1%;
+}
 
+section .Texto2 {
+  display: flex;
+  justify-content: start;
+  align-items: end;
+  flex-wrap: wrap;
+}
 
+.Texto2 h1 {
+  background-color: cadetblue;
+  border: none;
+  border-radius: 50px;
+  padding: 1%;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 30px;
+}
 
+.Texto2 p {
+  display: block;
+  font-size: 20px;
+}
 
+.container {
+  padding: 5%;
+  background-color: aliceblue;
+}
 
+.row {
+  padding: 4%;
+  border: 10px solid black;
+  background: url(../backgrounds/rock-music-background-seamless-pattern-50685509.jpg);
+}
 
+.col {
+  border: 2px solid black;
+  background-color: aliceblue;
+  padding: 5%;
+  margin: 2%;
+}
 
+figcaption {
+  font-size: large;
+  color: black;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
 
+article h2 {
+  background-color: burlywood;
+  border-radius: 10px;
+  width: 15vw;
+  display: flex;
+  text-align: center;
+}
 
+.col img:hover {
+  transform: scale(1.3);
+  padding: 1em;
+  border: 5px solid cornflowerblue;
+}
+
+footer {
+  justify-content: center;
+  display: flex;
+  background: url(../backgrounds/flat-world-rock-day-background-with-guitars-speakers_23-2149429179.avif);
+}
+
+footer h3 {
+  padding: 1%;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  color: white;
+  background-color: black;
+  border-radius: 50px;
+  margin: 2%;
+}
+
+.titulo {
+  background: cadetblue;
+  border: none;
+  border-radius: 50px;
+  padding: 1%;
+  font-family: "Courier New", Courier, monospace;
+  text-align: center;
+  color: black;
+}
+
+.Titular {
+  text-align: center;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  color: brown;
+  background-color: aliceblue;
+  border-radius: 20px;
+  padding: 1%;
+}
+
+.sec2 .titule {
+  font-size: 80px;
+  justify-content: center;
+  display: flex;
+  padding-bottom: 50px;
+}
+
+.sec2 article p {
+  font-size: 30px;
+}
+
+.sec2 article {
+  padding: 80px;
+}
+
+.sec2 article h2 {
+  font-size: 50px;
+  margin: 10px;
+}
+
+.sec2 article h4 {
+  font-size: 27px;
+  display: flex;
+  padding: 10px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+/* variables globales */
 /* RESPONSIVE */
-
-
-
-@media (max-width: 600px) { 
-   
-
-    .icon {width: auto;}
-
-    section {
-        width: auto;
-
-    }
-
-     .col figcaption {
-       font-size: 5px;
-     }
-
-     .col img {
-        width: 100px;
-     }
-
-    .Texto p {
-        font-size: 15px;
-
-    }
-       
-    .Texto2 p {
-        font-size: 15px;
-    }
-
-    .col iframe {
-        width: 300px;
-        height: 200px;
-    }
-
-
-
-    .titule {
+@media (max-width: 600px) {
+  .icon {
+    width: auto;
+  }
+  section {
+    width: auto;
+  }
+  .col figcaption {
+    font-size: 5px;
+  }
+  .col img {
+    width: 100px;
+  }
+  .Texto p {
+    font-size: 15px;
+  }
+  .Texto2 p {
+    font-size: 15px;
+  }
+  .col iframe {
+    width: 300px;
+    height: 200px;
+  }
+  .titule {
     font-size: 200;
     padding: 50em;
- }
+  }
+}
 
-
- }
+/*# sourceMappingURL=estilo.css.map */
