--- a/css/estilo.css
+++ b/css/estilo.css
@@ -103,10 +103,38 @@ header ul li a:hover {
   text-decoration: none;
 }
 .register fieldset .controls a:hover {
-  color: colorcss;
+  color: white;
   text-decoration: underline;
 }
 
+.sec2 .titule {
+  font-size: 80px;
+  justify-content: center;
+  display: flex;
+  padding-bottom: 50px;
+}
+
+.sec2 article p {
+  font-size: 30px;
+}
+
+.sec2 article {
+  padding: 80px;
+}
+
+.sec2 article h2 {
+  font-size: 50px;
+  margin: 10px;
+}
+
+.sec2 article h4 {
+  font-size: 27px;
+  display: flex;
+  padding: 10px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+/* variables globales */
 main {
   background: url(../backgrounds/hand-drawn-world-rock-day-background_23-2149445205.avif);
   padding: 5%;
@@ -245,34 +273,6 @@ footer h3 {
   padding: 1%;
 }
 
-.sec2 .titule {
-  font-size: 80px;
-  justify-content: center;
-  display: flex;
-  padding-bottom: 50px;
-}
-
-.sec2 article p {
-  font-size: 30px;
-}
-
-.sec2 article {
-  padding: 80px;
-}
-
-.sec2 article h2 {
-  font-size: 50px;
-  margin: 10px;
-}
-
-.sec2 article h4 {
-  font-size: 27px;
-  display: flex;
-  padding: 10px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-}
-
-/* variables globales */
 /* RESPONSIVE */
 @media (max-width: 600px) {
   .icon {
